--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, JPlayActivity"
-    />
+<com.nikolajbaer.androidrender.JPlayView
+      android:id="@+id/jplay"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"/>
 </LinearLayout>
 
