--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,6 +8,8 @@
       android:id="@+id/jplay"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
+      android:focusable="true"
+      android:focusableInTouchMode="true"
 />
 </LinearLayout>
 
